# RoboCupJapanOpen2018_education_GoGetIt

./: README.md
as_julius_english/: CMakeLists.txt  package.xml
as_julius_english/launch/: as_julius_en.launch
as_julius_english/src/: as_julius_english.cpp  main  main.cpp  main.jconf
em_active_slam/: CMakeLists.txt  package.xml
em_active_slam/launch/: education_active.rviz  education_active_slam.launch  em_active_node.launch  em_active_slam.launch  gmapping.launch.xml  move_base.launch
em_active_slam/src/: em_active_path_plan.py  em_frontier_approach.cpp
em_door_open/: CMakeLists.txt  package.xml
em_door_open/launch/: em_door_open.launch
em_door_open/src/: em_door_open.py
em_follow_me/: CMakeLists.txt  package.xml
em_follow_me/launch/: em_follow_me.launch  em_follow_me_test.launch
em_follow_me/src/: em_followme_withDepth.py
em_go_get_it/: CMakeLists.txt  package.xml
em_go_get_it/launch/: edu_go_get_it.launch
em_go_get_it/src/: em_go_get_it.py
em_spco_formation/: package.xml
em_spco_formation/launch/: em_navigation.launch  em_spco_formation.launch  em_spco_formation.rviz
em_spco_formation/parameter/: gibbs_hyper_parameter.txt
em_spco_formation/src/: __init__.py  a.txt  em_image_feature.py  em_image_feature_generator.py  em_name2place.py  em_path_plan.py  em_place2name.py  em_pose.py  lob.txt  (+3 more)
em_speech/: CMakeLists.txt  package.xml
kinect_yolo/: CMakeLists.txt  package.xml
kinect_yolo/launch/: kinect_yolo.launch
kinect_yolo/msg/: objects.msg  objectxyz.msg
kinect_yolo/scripts/: clustering.py
kinect_yolo/src/: kinect_yolo.cpp
(+116 files in other folders)
